--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fno-exceptions -fno-rtti")
 
 find_package(EGL REQUIRED)
 find_package(GLIB REQUIRED COMPONENTS gio)
+find_package(Vulkan REQUIRED)
 find_package(Wayland REQUIRED)
 find_package(WaylandEGL REQUIRED)
 find_package(WPEBackend REQUIRED)
@@ -17,6 +18,7 @@ set(WPEBACKEND_FDO_INCLUDE_DIRECTORIES
     "include"
     ${EGL_INCLUDE_DIRS}
     ${GLIB_INCLUDE_DIRS}
+    ${VULKAN_INCLUDE_DIRS}
     ${WAYLAND_INCLUDE_DIRS}
     ${WAYLAND_EGL_INCLUDE_DIRS}
     ${WPEBACKEND_INCLUDE_DIRS}
@@ -26,6 +28,7 @@ set(WPEBACKEND_FDO_LIBRARIES
     ${EGL_LIBRARIES}
     ${GLIB_GIO_LIBRARIES}
     ${GLIB_LIBRARIES}
+    ${VULKAN_LIBRARIES}
     ${WAYLAND_LIBRARIES}
     ${WAYLAND_EGL_LIBRARIES}
     ${WPEBACKEND_LIBRARIES}
@@ -40,6 +43,8 @@ set(WPEBACKEND_FDO_SOURCES
     src/fdo.cpp
     src/initialize-egl.cpp
     src/renderer-backend-egl.cpp
+    src/renderer-backend-vulkan.cpp
+    src/renderer-backend-wlclient.cpp
     src/renderer-host.cpp
     src/view-backend-exportable-fdo.cpp
     src/ws.cpp
